--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,107 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");html,body{background:#00968F;font-family:"Roboto",sans-serif;font-weight:400;font-size:28px;line-height:1.5;color:#fff;overflow-x:hidden}a{color:#000;text-decoration:none;transition:all 0.5s}a:hover{color:#000;text-decoration:none}a:focus{text-decoration:none}a:visited{text-decoration:none}.img-responsive{max-width:100%}ul{padding:0;margin:0;list-style:none}.left{float:left}.right{float:right}.hidden{display:none !important}@media (max-width: 768px){.hidden-xs{display:none !important}}@media (min-width: 768px){.visible-xs{display:none !important}}.hidden-md{display:block !important}@media (min-width: 990px){.hidden-md{display:none !important}}header{overflow:hidden;text-align:left;padding:30px}header .steps li{display:inline-block;width:16px;height:6px;background:#fff;margin-right:2px;border-radius:50px}header .steps li:first-of-type{background:#BFD730}footer{position:absolute;width:100%;background:#DDE8ED;bottom:0;text-align:center;padding:10px}footer .back-btn{position:absolute;left:10px}footer .next-btn{position:absolute;top:-34px;right:10px;background:#A3A3A3;border-radius:50px;width:75px;height:75px;text-align:center;padding-top:8px;border:7px solid #fff}footer .contact li{display:inline-block;margin:0 10px}.card{width:100%;border-radius:0;text-align:center;box-shadow:0 -4px 20px rgba(0,0,0,0.46);height:64vh;bottom:0;position:absolute;padding:30px}.card label{padding-bottom:20px;position:relative !important;font-size:25px !important}.card input{text-align:center;border:0;width:100%}.card input:focus,.card input:active{outline:none}.card .input-container{padding:0}.page-home{text-align:center}.page-home header .steps{display:none}.page-home .content{height:100vh;max-height:calc(100vh - 105px)}.page-home .buttons{height:30%}.page-home .description{height:70%;display:flex;align-items:center}.page-home .description p{color:#fff;margin-bottom:20px}.page-home .btn{background:#DC4588;color:#fff;display:block;width:fit-content;margin:0 auto;border-radius:2px;padding:16px 62px;margin-bottom:30px;letter-spacing:1.5px;font-size:14px}.page-home .lnk{font-size:16px;color:#fff}.page-home footer{display:none}.page-step1 header .logo{display:none}.page-step1 .card{transition:all 0.5s}.page-step1 .card p{color:#000;font-size:14px;letter-spacing:-0.5px;opacity:0;visibility:hidden;transition:all 0.5s}.page-step1 .card .input-container{position:absolute;top:calc(50% - 101px);width:calc(100% - 60px)}.page-step1 .card .input-container:before{content:"";position:absolute;bottom:0;right:10px;width:25px;height:25px;background-image:url(img/icon-send.png);background-repeat:no-repeat;background-size:contain;background-position:center;z-index:1;opacity:0;visibility:hidden;transition:all 0.5s}.page-step1 .card.active{height:87vh;transition:all 0.5s}.page-step1 .card.active p{opacity:1;visibility:visible;transition:all 0.5s}.page-step1 .card.active .input-container:before{bottom:10px;opacity:1;visibility:visible;transition:all 0.5s}.page-step1 .card.original label{color:#00968F}.page-step1 .card.original input{text-align:center;border:0;border-bottom:2px solid #00968F}
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
+/* line 1, ../sass/base/_reset.scss */
+html, body { background: #00968F; font-family: "Roboto", sans-serif; font-weight: 400; font-size: 28px; line-height: 1.5; color: #FFFFFF; overflow-x: hidden; }
+
+/* line 10, ../sass/base/_reset.scss */
+a { color: #000000; text-decoration: none; transition: all 0.5s; }
+/* line 15, ../sass/base/_reset.scss */
+a:hover { color: #000000; text-decoration: none; }
+/* line 20, ../sass/base/_reset.scss */
+a:focus { text-decoration: none; }
+/* line 24, ../sass/base/_reset.scss */
+a:visited { text-decoration: none; }
+
+/* line 29, ../sass/base/_reset.scss */
+.img-responsive { max-width: 100%; }
+
+/* line 32, ../sass/base/_reset.scss */
+ul { padding: 0; margin: 0; list-style: none; }
+
+/* line 37, ../sass/base/_reset.scss */
+.left { float: left; }
+
+/* line 40, ../sass/base/_reset.scss */
+.right { float: right; }
+
+/* line 43, ../sass/base/_reset.scss */
+.hidden { display: none !important; }
+
+@media (max-width: 768px) { /* line 46, ../sass/base/_reset.scss */
+  .hidden-xs { display: none !important; } }
+
+@media (min-width: 768px) { /* line 51, ../sass/base/_reset.scss */
+  .visible-xs { display: none !important; } }
+
+/* line 56, ../sass/base/_reset.scss */
+.hidden-md { display: block !important; }
+@media (min-width: 990px) { /* line 56, ../sass/base/_reset.scss */
+  .hidden-md { display: none !important; } }
+
+/* line 1, ../sass/partials/_header.scss */
+header { overflow: hidden; text-align: left; padding: 30px; }
+/* line 8, ../sass/partials/_header.scss */
+header .steps li { display: inline-block; width: 16px; height: 6px; background: #FFFFFF; margin-right: 2px; border-radius: 50px; }
+/* line 16, ../sass/partials/_header.scss */
+header .steps li:first-of-type { background: #BFD730; }
+
+/* line 1, ../sass/partials/_footer.scss */
+footer { position: absolute; width: 100%; background: #DDE8ED; bottom: 0; text-align: center; padding: 10px; }
+/* line 9, ../sass/partials/_footer.scss */
+footer .back-btn { position: absolute; left: 10px; }
+/* line 14, ../sass/partials/_footer.scss */
+footer .next-btn { position: absolute; top: -34px; right: 10px; background: #A3A3A3; border-radius: 50px; width: 75px; height: 75px; text-align: center; padding-top: 8px; border: 7px solid #FFFFFF; }
+/* line 28, ../sass/partials/_footer.scss */
+footer .contact li { display: inline-block; margin: 0 10px; }
+
+/* line 1, ../sass/partials/_card.scss */
+.card { width: 100%; border-radius: 0; text-align: center; box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.46); height: 64vh; bottom: 0; position: absolute; padding: 30px; }
+/* line 11, ../sass/partials/_card.scss */
+.card label { color: #00968F; padding-bottom: 20px; position: relative !important; font-size: 25px !important; }
+/* line 18, ../sass/partials/_card.scss */
+.card input { text-align: center; border: 0; border-bottom: 2px solid #00968F; width: 100%; }
+/* line 24, ../sass/partials/_card.scss */
+.card input:focus, .card input:active { outline: none; }
+/* line 29, ../sass/partials/_card.scss */
+.card .input-container { padding: 0; }
+
+/* line 1, ../sass/pages/_home.scss */
+.page-home { text-align: center; }
+/* line 5, ../sass/pages/_home.scss */
+.page-home header .steps { display: none; }
+/* line 10, ../sass/pages/_home.scss */
+.page-home .content { height: 100vh; max-height: calc(100vh - 105px); }
+/* line 15, ../sass/pages/_home.scss */
+.page-home .buttons { height: 30%; }
+/* line 19, ../sass/pages/_home.scss */
+.page-home .description { height: 70%; display: flex; align-items: center; }
+/* line 24, ../sass/pages/_home.scss */
+.page-home .description p { color: #FFFFFF; margin-bottom: 20px; }
+/* line 30, ../sass/pages/_home.scss */
+.page-home .btn { background: #DC4588; color: #FFFFFF; display: block; width: fit-content; margin: 0 auto; border-radius: 2px; padding: 16px 62px; margin-bottom: 30px; letter-spacing: 1.5px; font-size: 14px; }
+/* line 43, ../sass/pages/_home.scss */
+.page-home .lnk { font-size: 16px; color: #FFFFFF; }
+/* line 48, ../sass/pages/_home.scss */
+.page-home footer { display: none; }
+
+/* line 3, ../sass/pages/_step1.scss */
+.page-step1 header .logo { display: none; }
+/* line 8, ../sass/pages/_step1.scss */
+.page-step1 .field-completed { background: #FFFFFF; color: #6d6d6d; width: 100%; margin-bottom: 2px; }
+/* line 14, ../sass/pages/_step1.scss */
+.page-step1 .field-completed span { font-size: 12px; }
+/* line 18, ../sass/pages/_step1.scss */
+.page-step1 .field-completed p { font-size: 13px; color: #000000; margin-bottom: 15px; }
+/* line 24, ../sass/pages/_step1.scss */
+.page-step1 .field-completed a { position: absolute; right: 15px; top: 50%; font-size: 12px; }
+/* line 33, ../sass/pages/_step1.scss */
+.page-step1 .card { transition: all 0.5s; }
+/* line 35, ../sass/pages/_step1.scss */
+.page-step1 .card p { color: #000000; font-size: 14px; letter-spacing: -0.5px; opacity: 0; visibility: hidden; transition: all 0.5s; }
+/* line 44, ../sass/pages/_step1.scss */
+.page-step1 .card .input-container { position: absolute; top: calc(50% - 101px); width: calc(100% - 60px); }
+/* line 50, ../sass/pages/_step1.scss */
+.page-step1 .card.active { height: 87vh; transition: all 0.5s; }
+/* line 54, ../sass/pages/_step1.scss */
+.page-step1 .card.active p { opacity: 1; visibility: visible; transition: all 0.5s; }
+/* line 62, ../sass/pages/_step1.scss */
+.page-step1 .mini-card { background: #FFFFFF; width: 100%; color: #00968F; }
