--- a/sass/partials/_card.scss
+++ b/sass/partials/_card.scss
@@ -7,6 +7,52 @@
     bottom: 0;
     position: absolute;
     padding: 30px;
+
+    &.slide {
+        padding:0;
+        height: 62vh;
+
+        .question-wrapper {
+            background: $green;
+            padding: 20px 30px;
+            text-align: left;
+
+            .question {
+                font-size: 18px;
+                font-weight: $bold;
+
+                span {
+                    font-size: 12px;
+                    display: block;
+                    font-weight: $regular;
+                }
+            }
+        }
+
+        .answer-wrapper {
+            padding: 20px 30px;
+            color: $black;
+            text-align: left;
+
+            .title {
+                font-size: 16px;
+                font-weight: $bold;
+
+                span {
+                    display: block;
+                    color: $green;
+                    font-size: 12px;
+                    font-weight: $light;
+                }
+            }
+
+            .subtitle {
+                font-size: 14px;
+                font-weight: $bold;
+            }
+        }
+
+    }
     
     label{
         color: $green;
@@ -28,5 +74,25 @@
     
     .input-container{
         padding: 0;
+    }
+
+    .radio {
+        font-size: 0px;
+        margin-top: 15px;
+
+        label {
+            border: 1px solid $grey;    
+            width: 50%;
+            padding: 10px 30px;
+            font-size: 20px!important;
+
+            .bmd-radio {
+                position: relative;
+                padding: 0px 0px;
+                margin-right: 2px;
+                top: 8px;
+            }
+        }
+
     }
 }
