--- a/sass/pages/_step1.scss
+++ b/sass/pages/_step1.scss
@@ -4,34 +4,8 @@
             display: none;
         }
     }
-
-    .field-completed {
-        background: $white;
-        color: $grey;
-        width: 100%;
-        margin-bottom: 2px;
-
-        span {
-            font-size: 12px;
-        }
-
-        p {
-            font-size: 13px;
-            color: $black;
-            margin-bottom: 15px;
-        }
-
-        a {
-            position: absolute;
-            right: 15px;
-            top: 50%;
-            font-size: 12px;
-        }
-
-    }
     
     .card{
-        transition: all 0.5s;
         p{
             color: $black;
             font-size: 14px;
@@ -40,29 +14,94 @@
             visibility: hidden;
             transition: all 0.5s;
         }
-        
+
         .input-container{
             position: absolute;
             top: calc(50% - 101px);
             width: calc(100% - 60px);
+
+            &:before{
+                content: "";
+                position: absolute;
+                bottom: 0;
+                right: 10px;
+                width: 25px;
+                height: 25px;
+                background-image: url(img/icon-send.png);
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-position: center;
+                z-index: 1;
+                opacity: 0;
+                visibility: hidden;
+                transition: all 0.5s;
+            }
         }
         
-        &.active{
-            height: 87vh;
-            transition: all 0.5s;
-            
+         &.active{
+
             p{
                 opacity: 1;
                 visibility: visible;
                 transition: all 0.5s;
             }
+
+            .input-container{
+                 &:before{
+                     bottom: 10px;
+                     opacity: 1;
+                     visibility: visible;
+                     transition: all 0.5s;
+                }
+            }
         }
+
+    }
+
+    .field-completed {
+        background: $white;
+        color: $grey;
+        width: 100%;
+        margin-bottom: 2px;
+
+        span {
+            font-size: 14px;
+        }
+
+        p {
+            font-size: 16px;
+            color: $black;
+            margin-bottom: 15px;
+        }
+
+        a {
+            position: absolute;
+            right: 15px;
+            width: 50px;
+            height: 50px;
+            top: 50%;
+            font-size: 0;
+            background-image: url(img/icon-edit.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
     }
 
     .mini-card {
         background: $white;
         width: 100%;
         color: $green;
+        
+        .bmd-form-group{
+            padding-top: 15px;
+        }
+        
+        p{
+            font-size: 25px;
+            text-align: center;
+            margin: 0;
+        }
     }
 
 }
