--- a/sass/partials/_card.scss
+++ b/sass/partials/_card.scss
@@ -3,29 +3,67 @@
     border-radius: 0;
     text-align: center;
     box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.46);
-    height: 64vh;
+    height: 72vh;
     bottom: 0;
     position: absolute;
     padding: 30px;
+    transition: all 0.5s;
+    
+    
+    
+    &.b{
+        height: 61.7vh;
+    }
+    &.c{
+        height: 51.3vh;
+    }
+    &.d{
+        height: 41vh;
+    }
+
+    &.active{
+        height: 87vh;
+        transition: all 0.5s;
+    }
 
     &.slide {
         padding:0;
-        height: 62vh;
+        height: 58vh;
+        
+        .bmd-form-group{
+           padding: 0; 
+        }
 
         .question-wrapper {
             background: $green;
-            padding: 20px 30px;
+            padding: 15px 30px;
             text-align: left;
+            position: relative;
+            line-height: 1.3;
 
             .question {
-                font-size: 18px;
+                font-size: 22px;
                 font-weight: $bold;
 
                 span {
-                    font-size: 12px;
+                    font-size: 16px;
                     display: block;
                     font-weight: $regular;
                 }
+            }
+            
+            &:after{
+                content: "";
+                position: absolute;
+                width: 45px;
+                height: 45px;
+                border-radius: 50px;
+                background: $green;
+                background-image: url(img/icon-arrow.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                top: -26px;
+                right: 44%;
             }
         }
 
@@ -41,7 +79,7 @@
                 span {
                     display: block;
                     color: $green;
-                    font-size: 12px;
+                    font-size: 15px;
                     font-weight: $light;
                 }
             }
@@ -50,12 +88,32 @@
                 font-size: 14px;
                 font-weight: $bold;
             }
+            
+            .radio label .bmd-radio:after, label.radio-inline .bmd-radio:after{
+                width: 20px;
+                height: 20px;
+                border: 2px solid rgba(0,0,0,.54);
+            }
+            .radio label .bmd-radio:before, label.radio-inline .bmd-radio:before{
+                width: 20px;
+                height: 20px;
+            }
+            .radio label input[type=radio]:checked~.bmd-radio:after, label.radio-inline input[type=radio]:checked~.bmd-radio:after {
+                border-color: #009688;
+            }
+             .bmd-radio {
+                top: 4px;
+            }
+            
+            .radio label{
+                font-size: 15px !important;
+                color: #000000;
+             }
         }
 
     }
     
     label{
-        color: $green;
         padding-bottom: 20px;
         position: relative !important;
         font-size: 25px !important;
@@ -64,7 +122,6 @@
     input{
         text-align: center;
         border: 0;
-        border-bottom: 2px solid $green;
         width: 100%;
         
         &:focus, &:active{
