--- a/css/main.css
+++ b/css/main.css
@@ -89,48 +89,52 @@ footer .contact li { display: inline-block; margin: 0 10px; }
 /* line 24, ../sass/partials/_card.scss */
 .card.active { height: 87vh; transition: all 0.5s; }
 /* line 29, ../sass/partials/_card.scss */
-.card.slide { padding: 0; height: 58vh; }
-/* line 33, ../sass/partials/_card.scss */
+.card.slide { padding: 0; height: 58vh; position: fixed; top: calc(100vh - 160px); transition: top 0.5s; }
+/* line 36, ../sass/partials/_card.scss */
 .card.slide .bmd-form-group { padding: 0; }
-/* line 37, ../sass/partials/_card.scss */
+/* line 40, ../sass/partials/_card.scss */
 .card.slide .question-wrapper { background: #00968F; padding: 15px 30px; text-align: left; position: relative; line-height: 1.3; }
-/* line 44, ../sass/partials/_card.scss */
+/* line 47, ../sass/partials/_card.scss */
 .card.slide .question-wrapper .question { font-size: 22px; font-weight: 700; }
-/* line 48, ../sass/partials/_card.scss */
+/* line 51, ../sass/partials/_card.scss */
 .card.slide .question-wrapper .question span { font-size: 16px; display: block; font-weight: 400; }
-/* line 55, ../sass/partials/_card.scss */
-.card.slide .question-wrapper:after { content: ""; position: absolute; width: 45px; height: 45px; border-radius: 50px; background: #00968F; background-image: url(img/icon-arrow.png); background-repeat: no-repeat; background-position: center; top: -26px; right: 44%; }
-/* line 70, ../sass/partials/_card.scss */
-.card.slide .answer-wrapper { padding: 20px 30px; color: #000000; text-align: left; }
+/* line 58, ../sass/partials/_card.scss */
+.card.slide .question-wrapper:after { content: ""; position: absolute; width: 45px; height: 45px; border-radius: 50px; background: #00968F; background-image: url(img/icon-arrow.png); background-repeat: no-repeat; background-position: center; top: -26px; right: 44%; transform: rotate(180deg); transition: all 0.5s; }
 /* line 75, ../sass/partials/_card.scss */
+.card.slide .answer-wrapper { padding: 20px 30px; color: #000000; text-align: left; }
+/* line 80, ../sass/partials/_card.scss */
 .card.slide .answer-wrapper .title { font-size: 16px; font-weight: 700; }
-/* line 79, ../sass/partials/_card.scss */
+/* line 84, ../sass/partials/_card.scss */
 .card.slide .answer-wrapper .title span { display: block; color: #00968F; font-size: 15px; font-weight: 300; }
-/* line 87, ../sass/partials/_card.scss */
-.card.slide .answer-wrapper .subtitle { font-size: 14px; font-weight: 700; }
 /* line 92, ../sass/partials/_card.scss */
-.card.slide .answer-wrapper .radio label .bmd-radio:after, .card.slide .answer-wrapper label.radio-inline .bmd-radio:after { width: 20px; height: 20px; border: 2px solid rgba(0, 0, 0, 0.54); }
+.card.slide .answer-wrapper .subtitle { font-size: 14px; font-weight: 700; }
 /* line 97, ../sass/partials/_card.scss */
+.card.slide .answer-wrapper .radio label .bmd-radio:after, .card.slide .answer-wrapper label.radio-inline .bmd-radio:after { width: 20px; height: 20px; border: 2px solid rgba(0, 0, 0, 0.54); }
+/* line 102, ../sass/partials/_card.scss */
 .card.slide .answer-wrapper .radio label .bmd-radio:before, .card.slide .answer-wrapper label.radio-inline .bmd-radio:before { width: 20px; height: 20px; }
-/* line 101, ../sass/partials/_card.scss */
+/* line 106, ../sass/partials/_card.scss */
 .card.slide .answer-wrapper .radio label input[type=radio]:checked ~ .bmd-radio:after, .card.slide .answer-wrapper label.radio-inline input[type=radio]:checked ~ .bmd-radio:after { border-color: #009688; }
-/* line 104, ../sass/partials/_card.scss */
+/* line 109, ../sass/partials/_card.scss */
 .card.slide .answer-wrapper .bmd-radio { top: 4px; }
-/* line 108, ../sass/partials/_card.scss */
+/* line 113, ../sass/partials/_card.scss */
 .card.slide .answer-wrapper .radio label { font-size: 15px !important; color: #000000; }
-/* line 116, ../sass/partials/_card.scss */
+/* line 119, ../sass/partials/_card.scss */
+.card.slide.show { position: relative; top: 0; transition: all 0.5s; }
+/* line 126, ../sass/partials/_card.scss */
+.card.slide.show .question-wrapper:after { transform: rotate(0); transition: top 0.5s; }
+/* line 135, ../sass/partials/_card.scss */
 .card label { padding-bottom: 20px; position: relative !important; font-size: 25px !important; }
-/* line 122, ../sass/partials/_card.scss */
+/* line 141, ../sass/partials/_card.scss */
 .card input { text-align: center; border: 0; width: 100%; }
-/* line 127, ../sass/partials/_card.scss */
-.card input:focus, .card input:active { outline: none; }
-/* line 132, ../sass/partials/_card.scss */
-.card .input-container { padding: 0; }
-/* line 136, ../sass/partials/_card.scss */
-.card .radio { font-size: 0px; margin-top: 15px; }
-/* line 140, ../sass/partials/_card.scss */
-.card .radio label { border: 1px solid #6d6d6d; width: 50%; padding: 10px 30px; font-size: 20px !important; }
 /* line 146, ../sass/partials/_card.scss */
+.card input:focus, .card input:active { outline: none; }
+/* line 151, ../sass/partials/_card.scss */
+.card .input-container { padding: 0; }
+/* line 155, ../sass/partials/_card.scss */
+.card .radio { font-size: 0px; margin-top: 15px; }
+/* line 159, ../sass/partials/_card.scss */
+.card .radio label { border: 1px solid #6d6d6d; width: 50%; padding: 10px 30px; font-size: 20px !important; }
+/* line 165, ../sass/partials/_card.scss */
 .card .radio label .bmd-radio { position: relative; padding: 0px 0px; margin-right: 2px; top: 8px; }
 
 /* line 2, ../sass/partials/_hero.scss */
@@ -226,5 +230,7 @@ footer .contact li { display: inline-block; margin: 0 10px; }
 .page-step2 .card.active { height: 87vh; transition: all 0.5s; }
 /* line 70, ../sass/pages/_step2.scss */
 .page-step2 .card.active p { opacity: 1; visibility: visible; transition: all 0.5s; }
-/* line 78, ../sass/pages/_step2.scss */
+/* line 77, ../sass/pages/_step2.scss */
+.page-step2 .card.slide { transition-delay: -0.15s; }
+/* line 82, ../sass/pages/_step2.scss */
 .page-step2 .mini-card { background: #FFFFFF; width: 100%; color: #00968F; }
